prevent logo from hiding on tablet

--- a/public/css/sense.less
+++ b/public/css/sense.less
@@ -1,8 +1,8 @@
 @import "./sense.light.css";
 @import (reference) "~ui/styles/variables";
 
-#es_method {
-  width: 100px;
+nav.navbar .logo.hidden-sm {
+  display: block !important;
 }
 
 [sense-navbar] {
